Troca de cards por Wrapper

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             quis totam! Minus provident exercitationem sapiente ut ex repellat
             vel odio doloremque?
           </p>
-          <article class="card">
+          <article class="wrapper">
             <h2>Tranquil Desert Haven</h2>
             <img
               src="https://images.unsplash.com/photo-1702927706292-c57d75cf2143?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDU1MDMyMzR8&ixlib=rb-4.0.3&q=80&w=400"
@@ -36,7 +36,7 @@
           </article>
         </section>
 
-        <section class="cards">
+        <section class="wrapper">
           <article class="card">
             <h2>Serenity Oasis Retreat</h2>
             <img
