Atualização da página em html e css

--- a/index.html
+++ b/index.html
@@ -4,70 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Container Queries</title>
+    <title>Scrum</title>
   </head>
   <body>
     <div class="wrapper">
       <main>
-        <section class="primary-content" style="--theme: dark">
-          <h1>Desert Oasis: Exploring Nature's Tranquility</h1>
+        <section class="primary-content" style="--theme: white">
+          <h1>Conhecendo a metodologia scrum</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Exercitationem neque tenetur numquam officiis officia, eos eligendi
-            animi architecto aliquam dignissimos, at minus, aperiam expedita.
-            Officia ad nostrum harum deleniti quasi!
-          </p>
-          <p>
-            Consectetur sunt, in sit iure dolor ratione odit necessitatibus
-            velit animi tempore, tenetur alias accusantium impedit ad vitae,
-            quis totam! Minus provident exercitationem sapiente ut ex repellat
-            vel odio doloremque?
+            A Metodologia Scrum é considerada um método ágil. Trata-se de um framework (conjunto de ações e estratégias para solucionar problemas) normalmente utilizado com projetos mais complexos.
+
+            O conceito principal é a ideia de finalizar um projeto mais rápido, com melhor qualidade, otimizando os recursos humanos e materiais. Além disso, potencializa o trabalho em equipe com foco no cumprimento dos prazos estipulados por meio do acompanhamento da evolução do projeto. 
           </p>
           <article class="card">
-            <h2>Tranquil Desert Haven</h2>
+            <h2>Processo scrum de uma empresa</h2>
             <img
-              src="https://images.unsplash.com/photo-1702927706292-c57d75cf2143?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDU1MDMyMzR8&ixlib=rb-4.0.3&q=80&w=400"
+              src="https://eventos.ifmt.edu.br/media/event/tmp/20230810024802/images/1691693282-Scrum.png"
               alt=""
             />
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore
-              reiciendis non eaque consectetur. Unde, delectus!
+              
             </p>
           </article>
         </section>
 
         <section class="cards">
           <article class="card">
-            <h2>Serenity Oasis Retreat</h2>
+            <h2>Porduct Owner</h2>
             <img
-              src="https://images.unsplash.com/photo-1704137477371-bed38523c2eb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDU1MDIxOTR8&ixlib=rb-4.0.3&q=80&w=400"
+              src="https://static.vecteezy.com/system/resources/previews/015/981/946/original/product-owner-icon-design-free-vector.jpg"
               alt=""
             />
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore
-              reiciendis non eaque consectetur. Unde, delectus!
+              O PO de uma empresa, é responsável pelo maior contato entre o projeto e o cliente.
+              O time, precisa ter uma visão clara sobre o que fazer em cada sprint, enquanto os stakeholders precisam ter um canal de comunicação para realizar feedbacks.
             </p>
           </article>
           <article class="card">
-            <h2>Mirage Haven Cottage</h2>
+            <h2>Scrum Master</h2>
             <img
-              src="https://images.unsplash.com/photo-1703783010857-9bd7a7b97c50?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDU1MDIxOTR8&ixlib=rb-4.0.3&q=80&w=400"
+              src="https://cdn-icons-png.flaticon.com/512/1933/1933998.png"
               alt=""
             />
             <p>
-              Molestias similique quasi expedita doloribus odit consectetur
-              harum placeat qui! Alias commodi soluta possimus veritatis.
+              O scrum master deve viabilizar o scrum em equipes maiores, garantindo que a estrutura seja seguida. 
+              Esse profissional segue a metodologia scrum, os princípios de agilidade e as práticas recomendadas, mas também deve cultivar a flexibilidade e a mente aberta para oportunidades de melhoria no fluxo de trabalho da equipe.
             </p>
           </article>
           <article class="card">
-            <h2>Sand Dune Hideaway</h2>
+            <h2>Desenvolvedores</h2>
             <img
-              src="https://images.unsplash.com/photo-1704137477371-bed38523c2eb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MDU1MDIxOTR8&ixlib=rb-4.0.3&q=80&w=400"
+              src="https://cdn-icons-png.flaticon.com/512/6840/6840541.png"
               alt=""
             />
             <p>
-              Cupiditate voluptate, provident cum aut tempore, voluptatem,
-              repellendus nisi ratione ex laudantium nulla! Repellat, nemo?
+              É uma equipe responsável por criar, manter e aprimorar programas de computador, aplicativos e sistemas. 
+              Eles trabalham utilizando diferentes linguagens de programação e ferramentas de desenvolvimento para traduzir requisitos e ideias em código executável.
             </p>
           </article>
         </section>
